<resources>

    <!--Shared Preferences !-->
    <string name="shared_preferences_user_id">-1</string>
    <string name="shared_preferences_user_telephone">0</string>
    <string name="shared_preferences_firebase_id">shared_preferences_firebase_id</string>
    <string name="shared_preferences">MAIN_SHARED_PREFERENCES</string>
    <string name="shared_preferences_current_user">SHARED_PREFERENCES_CURRENT_USER</string>
    <string name="shared_preferences_user_message">SHARED_PREFERENCES_CURRENT_USER_MESSAGE</string>
    <string name="shared_preferences_safe_contact_list">SHARED_PREFERENCES_SAFE_CONTACTS_LIST</string>

    <!--Request Activity !-->
    <string name="notification_request_title">%s</string>
    <string name="notification_send_request_title">%s</string>
    <string name="notification_request_description">Quiere que sea su contacto de confianza</string>
    <string name="accept">Aceptar</string>
    <string name="refuse">Rechazar</string>

    <string name="deny_request_message">Solicitud rechazada</string>
    <string name="accept_request_message">Recibirás alertas cuando %s esté en peligro</string>

    <!--Notification Messages!-->
    <string name="notification_help_title">%s TE NECESITA</string>


    <!-- Validation Hints !-->
    <string name="required_field_hint">¡Este campo es requerido!</string>
    <string name="required_telephone_hint">El número telefónico debe contar con 10 dígitos</string>
    <string name="required_email_hint">Email inválido, intente con otro</string>
    <string name="required_strong_password_hint">La contraseña debe contener al menos 8 caracteres, 1 mayúscula, 1 número y 1 caractér especial</string>
    <string name="required_same_password_hint">Ambas contraseñas deben coincidir</string>
    <string name="required_safe_contacts_hint">Necesitas tener al menos un contacto de confianza</string>
    <string name="incomplete_fields">Revise el formulario nuevamente</string>
    <string name="incomplete_fields_title">Proceso incompleto</string>

    <!-- Permission Hints !-->
    <string name="denied_permissions_message_hint">Para mejorar tu experiencia necesitaremos todos los permisos en un futuro</string>
    <string name="denied_camera_permission_message_hint">Para continuar, necesitamos usar tu cámara</string>
    <string name="denied_read_contacts_permission_message_hint">Para continuar, necesitamos acceder a tus contactos</string>
    <string name="denied_location_message_hint">Para continuar, necesitamos localizar tu ubicación</string>
    <string name="permission_configuration_hint">Entendido</string>
    <string name="granted_permissions_message_hint">¡Empecémos!</string>
    <string name="add_safe_contacts_manually_hint">Por favor, usa el formulario para registrar a %s</string>
    <string name="app_name">SegurApp</string>
    <string name="package_name">org.bedu.segurapp</string>

    <!-- Social Security Activity !-->
    <string name="search_service">Buscar servicio</string>
    <!-- Login Activity !-->
    <string name="email_address">Correo electrónico</string>
    <string name="email_address_hint">Ingrese su correo electrónico</string>
    <string name="login_user">Teléfono</string>
    <string name="login_user_hint">Ingrese su número de teléfono</string>
    <string name="login_password">Contraseña</string>
    <string name="login_password_hint">Ingrese su contraseña</string>
    <string name="login_btn_primary">Ingresar</string>
    <string name="login_btn_secondary">Crear cuenta</string>
    <string name="login_forgot_pass">¿Olvidaste la contraseña?</string>
    <string name="login_unknow_user">Iniciar sesion mas tarde</string>
    <string name="wrong_credentials_login">Usuario o contraseña incorrectos, vuelve a intentar</string>

    <!-- Register Activity !-->
    <string name="register">Registrarse</string>
    <string name="register_user">Usuario</string>
    <string name="register_user_hint">Ingrese un nombre de usuario</string>
    <string name="register_password">Correo</string>
    <string name="register_password_hint">Ingrese su contraseña</string>
    <string name="register_btn_primary">Registrarse</string>
    <string name="home_btn_help">¡Ayuda!</string>
    <string name="home_btn_stop">¡Detener!</string>

    <!-- Tracking Activity !-->
    <string name="tracking_btn_help">Enviar Ayuda</string>
    <string name="tracking_alert_title">La Alerta ha finalizado</string>
    <string name="tracking_alert_description">¿Deseas conservar la ruta?</string>
    <string name="tracking_snack_bar_clipboard">Para copiar al portapapeles presione aceptar</string>

    <!-- DetailContact Activity !-->
    <string name="hello_message">Hola %s</string>
    <string name="send_notification_title">Notificación reenviada</string>

    <!-- Forgot Password Bottom Sheet !-->
    <string name="forgot_password_send_hint">Enviar</string>

    <!-- Bottom Navigation Menu !-->
    <string name="menu_sms">Mensajes</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_contacts">Contactos</string>
    <string name="menu_services">Servicios Públicos</string>

    <!-- App Bar !-->
    <string name="drawer_welcome">Bienvenido</string>
    <string name="drawer_email">correo@mail.com</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_account">Mi cuenta</string>
    <string name="drawer_account_info">Mi Informacion</string>
    <string name="drawer_account_messages">Mensajes Automaticos</string>
    <string name="drawer_account_location">Ubicaciones Guardadas</string>
    <string name="drawer_extra">Politicas y Privacidad</string>
    <string name="drawer_info">Informacion</string>
    <string name="drawer_about">Acerca de</string>
    <string name="drawer_privacy">Privacidad</string>
    <string name="drawer_seach_contact">Buscar contacto</string>
    <string name="drawer_seach_sms">Buscar mensaje</string>
    <string name="drawer_logout">Cerrar sesión</string>


    <string name="open_drawer">Abierto</string>
    <string name="close_drawer">Cerrado</string>

    <!-- Messages !-->
    <string name="sms_username">Nombre</string>
    <string name="sms_message">Mensaje</string>
    <string name="sms_hour">00:00</string>

    <!-- Contacts !-->
    <string name="btn_float_add">Agregar contacto</string>
    <string name="contact_name">Nombre</string>
    <string name="contact_name_hint">Ingrese el nombre </string>
    <string name="contact_phone">Numero de telefono</string>
    <string name="contact_phone_hint">Ingrese el numero de telefono </string>
    <string name="contact_save">Guardar</string>
    <string name="contact_cancel">Cancel</string>

    <!-- Get Started Splash Fragment !-->
    <string name="welcome_message_title">¡Hola!</string>
    <string name="welcome_message_description">Para continuar vamos a configurar tu perfil</string>
    <string name="btn_continue_title">Activar</string>

    <!-- Get Started Profile Configuration Fragment !-->
    <string name="hint_phone_number">Ingrese su número telefónico</string>
    <string name="hint_emergency_message">Mensaje automático de emergencia</string>
    <string name="btn_next">Siguiente</string>

    <!-- Get Started Profile Safe Contacts Fragment !-->
    <string name="almost_ready_message_title">Casi listo</string>
    <string name="almost_ready_message_description">Para continuar necesitamos que guardes tus contactos de confianza</string>
    <string name="another_option_message">O si prefieres, Registralo directamente: </string>
    <string name="tip_register_contact">Para registrar tu(s) contacto(s), presiona la tecla Enter de tu Teclado </string>
    <string name="search_safe_contact">Buscar contactos de confianza</string>
    <string name="hint_contact_phone_number">Número telefónico de contacto</string>
    <string name="hint_contact_name">Alias de contacto</string>
    <string name="btn_save_contact_hint">Guardar contacto</string>
    <string name="read_contact_permission_title">Permiso para leer tus contactos</string>
    <string name="read_contact_permission_message">Necesitamos acceder a tus contactos para ayudarte a encontrar tus contactos fácilmente</string>
    <string name="btn_finish_hint">Finalizar</string>
    <string name="ok">OK</string>
    <string name="search">Buscar</string>

    <!-- Get Started Splash Fragment !-->
    <string name="congratulations_message_title">¡Felicidades!</string>
    <string name="congratulations_message_description">Has creado tu cuenta exitosamente. Ahora estás a salvo</string>
    <string name="accept_hint">Aceptar</string>


    <!-- Location Dialog -->
    <string name="location_title">Mantener su ubicación activa</string>
    <string name="location_description">Es necesario activar su ubicación GPS para que los servicios de localización funcionen correctamente.</string>

    <!-- Channel Help -->
    <string name="channel_help">Ayuda</string>
    <string name="courses_description">Notificación de ayuda</string>

    <!-- Notification -->
    <string name="notification_title">SegurApp Alert</string>
    <string name="notification_text">Ubicación enviada a todos los contactos</string>
    <string name="about_developers">Desarrolladores</string>

    <!-- Mapbox key !-->
    <string name="mapbox_access_token">pk.eyJ1IjoiZHluYW1vZGRvcyIsImEiOiJja3RjNHRvZGwyMjFzMm9wbGJ1Y3Joa3huIn0.6eAhIfQStufCZ1Exe-LgqQ</string>

    <!-- My Info !-->
    <string name="update_profile">Actualizar perfil</string>
    <string name="help_message">Mensaje de ayuda</string>
    <string name="success_update_profile">Perfil actualizado correctamente</string>

    <!-- Logout !-->
    <string name="logout_title">¿Desea cerrar sesión?</string>
    <string name="btn_exit">SALIR</string>
    <string name="btn_back">VOLVER AL INICIO</string>


    <!-- Privacy !-->
    <string name="privacy_title">Políticas de Privacidad</string>
    <string name="privacy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="privacyAllText">SegurApp es un proyecto desarrollado y
        presentado para el curso Desarrollo Móvil impartido por BEDU en colaboracion con Santander.</string>


</resources>
