<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/contactsFragment"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/socialSecurityFragment"
            android:icon="@drawable/ic_emergency"
            android:title="@string/menu_services" />
    </group>
    <item android:title="@string/drawer_account">
        <menu>
            <item
                android:id="@+id/myInfoActivity"
                android:icon="@drawable/ic_account"
                android:title="@string/drawer_account_info" />
        </menu>
    </item>

    <item android:title="@string/drawer_extra">
        <menu>
            <item
                android:id="@+id/aboutActivity"
                android:icon="@drawable/ic_info"
                android:title="@string/drawer_about" />

            <item
                android:id="@+id/privacyActivity"
                android:icon="@drawable/ic_privacy"
                android:title="@string/drawer_privacy" />
            <item
                android:id="@+id/logoutActivity"
                android:icon="@drawable/ic_logout"
                android:title="@string/drawer_logout" />
        </menu>
    </item>
</menu>