<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_border"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/login_decoration" />

            <ImageView
                android:id="@+id/img_logo"
                style="@style/login_img"
                app:srcCompat="@drawable/segurapp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvMail"
            style="@style/loginTextView"
            android:layout_marginVertical="@dimen/size_16"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/etLoginEmail"
            style="@style/loginEdiText"
            android:hint="@string/email_address_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvPassword"
            style="@style/loginTextView"
            android:text="@string/login_password"
            android:layout_marginVertical="@dimen/size_16"/>

        <EditText
            android:id="@+id/etLoginPassword"
            style="@style/loginEdiText"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/btSubmit"
            style="@style/buttomPrimary"
            android:layout_marginTop="@dimen/size_32"
            android:text="@string/login_btn_primary" />

        <Button
            android:id="@+id/btCreate"
            style="@style/buttonSecondary"
            android:foreground="@drawable/bt_border"
            android:text="@string/login_btn_secondary" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/loginTextView"
            android:gravity="center"
            android:text="@string/login_forgot_pass" />


        <TextView
            android:id="@+id/tvUknownUser"
            style="@style/loginTextView"
            android:text="@string/login_unknow_user"
            android:gravity="center"/>
    </LinearLayout>
</ScrollView>