<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/login_decoration" />


        <TextView
            android:id="@+id/tvRegisterLogo"
            style="@style/header_text"
            android:layout_marginTop="@dimen/size_64"
            android:text="@string/register"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/tvUser"
            style="@style/loginTextView"
            android:text="@string/register_user"
            android:layout_below="@id/tvRegisterLogo"/>

        <EditText
            android:id="@+id/etRegisterUser"
            style="@style/loginEdiText"
            android:hint="@string/register_user_hint"
            android:inputType="textPersonName"
            android:layout_below="@+id/tvUser"/>


        <TextView
            android:id="@+id/tvRMail"
            style="@style/loginTextView"
            android:text="@string/login_user"
            android:layout_below="@id/etRegisterUser"/>


        <EditText
            android:id="@+id/etregisterEmail"
            style="@style/loginEdiText"
            android:hint="@string/login_user_hint"
            android:inputType="textEmailAddress"
            android:layout_below="@id/tvRMail"/>

        <TextView
            android:id="@+id/tvRPassword"
            style="@style/loginTextView"
            android:text="@string/login_password"
            android:layout_below="@id/etregisterEmail"/>


        <EditText
            android:id="@+id/etRegisterPassword"
            style="@style/loginEdiText"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:layout_below="@id/tvRPassword"/>

        <Button
            android:id="@+id/btSubmit"
            style="@style/buttomPrimary"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            android:layout_below="@id/etRegisterPassword"/>


    </RelativeLayout>
</ScrollView>

