<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_16"
    tools:context=".ui.getStarted.GetStartedSafeContactsFragment">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_24"
        android:max="100"
        android:progress="75" />


        <LinearLayout
            android:id="@+id/ll_info"
            style="@style/getStartedSafeContactsLinearLayout">

            <TextView
                style="@style/getStartedSplashTextViewTitle"
                android:text="@string/almost_ready_message_title" />

            <TextView
                style="@style/getStartedSplashTextViewDescription"
                android:text="@string/almost_ready_message_description" />


            <Button
                android:id="@+id/btn_safe_contacts"
                style="@style/getStartedSafeContactsButton"
                android:layout_margin="@dimen/size_24" />

            <TextView
                style="@style/getStartedSplashTextViewDescription"
                android:text="@string/another_option_message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_contact_name"
                    style="@style/get_started_edit_text"
                    android:layout_marginBottom="@dimen/size_48"
                    android:drawableStart="@drawable/ic_message"
                    android:hint="@string/hint_contact_name"
                    android:nextFocusDown="@+id/txt_number"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txt_number"
                    style="@style/get_started_edit_text"
                    android:digits="1234567890"
                    android:drawableStart="@drawable/ic_call2"
                    android:hint="@string/hint_contact_phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:maxLength="10" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips_container"
                style="@style/getStartedChipContainer"
                app:chipSpacing="@dimen/size_8"
                app:singleLine="false"
                app:singleSelection="true"/>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_rounded"
                android:text="@string/btn_finish_hint" />

        </LinearLayout>

</FrameLayout>