<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.LogoutActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_title"
        style="@style/title_text"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/exit_animation"
        android:layout_margin="@dimen/size_48"
        style="@style/getStartedSplashLottieAnimationView" />


    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:layout_marginHorizontal="@dimen/size_24"
        android:textColor="@color/white"
        android:text="@string/btn_exit"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:background="@drawable/bg_dialog"
        android:layout_marginHorizontal="@dimen/size_24"
        android:layout_marginTop="@dimen/size_16"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"/>
</LinearLayout>