<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/size_16">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_forgot_password_title"
        style="@style/forgotPasswordTextView"
        android:layout_marginBottom="@dimen/size_24"
        android:gravity="center"
        android:text="@string/login_forgot_pass" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_marginHorizontal="@dimen/size_32"
        android:layout_marginBottom="@dimen/size_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/met_email"
            style="@style/forgotPasswordEdiText"
            android:hint="@string/email_address_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_send"
        style="@style/buttomPrimary"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_send_hint" />
</LinearLayout>