<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/login_animation"
                style="@style/loginUserAnimation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserAdd"
                style="@style/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_32"
                android:layout_marginTop="@dimen/size_32"
                android:text="@string/contact_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_animation" />

            <EditText
                android:id="@+id/etUserAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_32"
                android:layout_marginTop="@dimen/size_8"
                android:autofillHints=""
                android:hint="@string/contact_name_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserAdd" />

            <TextView
                android:id="@+id/tvPhoneAdd"
                style="@style/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_32"
                android:layout_marginTop="@dimen/size_32"
                android:text="@string/contact_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUserAdd" />

            <EditText
                android:id="@+id/etPhoneAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_32"
                android:layout_marginTop="@dimen/size_8"
                android:autofillHints=""
                android:digits="1234567890"
                android:hint="@string/contact_phone_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneAdd"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btn_save_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_32"
                android:layout_marginTop="@dimen/size_32"
                android:background="@drawable/et_rounded"
                android:text="@string/btn_save_contact_hint"
                android:textColor="@color/segurapp_white_variant"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneAdd" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>